# rawdger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
core/: CMakeLists.txt
core/include/rawdger/: Core.h  Recorder.h
core/src/: Core.cpp  Recorder.cpp
juce-app/: CMakeLists.txt
juce-app/Source/: JuceMain.cpp  Main.cpp  MainComponent.h  MainWindow.h
qt-app/: CMakeLists.txt  Info.plist
qt-app/src/: AudioRecorder.cpp  AudioRecorder.h  QtMain.cpp  WavFileWriter.cpp  WavFileWriter.h  main.cpp
tests/: CMakeLists.txt  RecorderTests.cpp
